# learn-general-ai-agent

./: .gitignore  README.md  app.py  justfile  pyproject.toml  requirements.txt
src/: agent.py  agent_rag.py  agent_understand_file.py  constants.py  models.py  question_choices.py  question_fetcher.py  submit_questions.py  tool_rag.py  tool_understand_web_page.py  tools.py
src/tools/: audio_url_to_text.py  chess.py  understand_web_page.py  vision.py  web_rag.py
