[project]
name = "learn-general-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=3.4.3",
    "dotenv>=0.9.9",
    "gradio[oauth]>=5.27.0",
    "panda>=0.3.1",
    "requests>=2.32.3",
    "ruff>=0.11.7",
]
