[project]
name = "learn-general-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=3.4.3",
    "chess>=1.11.2",
    "dotenv>=0.9.9",
    "ffmpeg>=1.4",
    "gradio[oauth]>=5.27.0",
    "litellm>=1.67.4.post1",
    "openpyxl>=3.1.5",
    "panda>=0.3.1",
    "pathlib>=1.0.1",
    "py-mon>=2.1.0",
    "requests>=2.32.3",
    "ruff>=0.11.7",
    "smolagents[audio,litellm]>=1.14.0",
    "transformers[torch]>=4.51.3",
]
